--- a/branches/mcxtrace_1_0/l_monitor.tex
+++ b/branches/mcxtrace_1_0/l_monitor.tex
@@ -5,12 +5,12 @@
 \label{s:L_monitor}
 \index{Monitors!Wavelength monitor}
 
-\component{L\_monitor}{System}{$x_{\rm min}$, $x_{\rm max}$, $y_{\rm min}$, $y_{\rm max}$, $n_{\rm chan}$, $\lambda_{\rm min}$, $\lambda_{\rm max}$, filename}{}{}
+\component{L\_monitor}{System}{$x_{\rm width}$, $y_{\rm height}$, $y_{\rm max}$, $n_{\rm \lambda}$, $\lambda_{\rm min}$, $\lambda_{\rm max}$, filename}{ $x_{\rm min}$,$x_{\rm max}$, $y_{\rm min}$,$y_{\rm max}$,restore\_xray},{}
 
 
 The component {\bf L\_monitor} is very similar to
 {\bf TOF\_monitor} and {\bf E\_monitor}.
-This component is just sensitive to the neutron wavelength.
+This component is just sensitive to the xray wavelength.
 The wavelength spectrum is output in a one-dimensional histogram.
 between $\lambda_{\rm min}$ and $\lambda_{\rm max}$ (measured in \AA ).
 
