--- a/branches/mcxtrace_1_0/Component_manual.tex
+++ b/branches/mcxtrace_1_0/Component_manual.tex
@@ -43,10 +43,15 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}}
 
+\newcommand{\MCX}{{McXtrace}}
 \newcommand{\MCS}{{McStas}}
-\newcommand{\version}{{1.12}}
-\newcommand{\reldate}{{May, 2008}}
+\newcommand{\version}{{1.0\_rc1}}
+\newcommand{\reldate}{{Mar, 2011}}
 \newcommand{\Ombold}{\mbox{\boldmath $\Omega$}}
+
+\newcommand{\NBIlong}{Niels Bohr Institute, Univeristy of Copenhagen, Copenhagen, Denmark}
+\newcommand{\Lifelong}{Faculty for Life Sciences, University of Copenhagen, Copenhagen, Denmark}
+
 
 % enable index generation
 \makeindex
