--- a/branches/mcxtrace_1_0/preface.tex
+++ b/branches/mcxtrace_1_0/preface.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{chapter}{\protect\numberline{}{Preface and acknowledgements}}
 \chapter*{Preface and acknowledgements}
 This document contains information on the Monte Carlo
-X-ray tracing program \MCX\ version \version, building on the initial
+X-ray tracing program \MCX version \version, building on the initial
 release in October 1998 of the nuetron ray tracing program \MCS version 1.0 as presented in Ref.~\cite{nn_10_20}. The reader of this
 document is expected to have some knowledge of X-ray and/or neutron scattering,
 whereas only little knowledge about simulation techniques is
@@ -21,7 +21,7 @@ In case of errors, questions, or suggestions,
 %or other need for support should aris,
 do not hesitate to
 contact the authors at \verb+@risoe.dk+
-or consult the \MCX\ home page~\cite{mcxtrace_webpage}.
+or consult the \MCX home page~\cite{mcxtrace_webpage}.
 A special bug/request reporting service is available \cite{mczilla_webpage}.
 
 If you {\bf appreciate} this software, please subscribe to the \verb+mcxtrace-users@mcxtrcae.org+ email list, send us a smiley message, and contribute to the package. We also encourage you to refer to this software when publishing results, with the following citations:
@@ -33,24 +33,19 @@ If you {\bf appreciate} this software, please subscribe to the \verb+mcxtrace-us
 
 %\section*{\MCS\ \version\ contributors}
 
-Third party software included in \MCX\ are:
+Third party software included in \MCX is:
 \begin{itemize}
 \item perl Math::Amoeba from John A.R. Williams \verb+J.A.R.Williams@aston.ac.uk+.
 \item perl Tk::Codetext from Hans Jeuken \verb+haje@toneel.demon.nl+.
 \item scilab Plotlib from St\'ephane Mottelet \verb+mottelet@utc.fr+.
 \item and optionally PGPLOT from Tim Pearson \verb+tjp@astro.caltech.edu+.
 \end{itemize}
-%and special thanks to the following \MCX\ contributors:
-%\begin{itemize}
-%\item Christophe Taton from ENSIMAG/Grenoble for the MPI support
-%\item Reynald Arnerin from Universite J. Fourrier, Grenoble for the complex geometry support in samples
-%\end{itemize} 
 
 The \MCX project is supported by Det Strategiske Forskningsråd through the NaBiIT programme. Partners in this joint venture are: 
-\begin{list}
-\item Materials Reseach Division, Risø DTU, Roskilde, Denmark\\
+\begin{itemize}
+\item Materials Research Division, Risø DTU, Roskilde, Denmark\\
 \item Niels Bohr Institute, University of Copenhagen, Denmark\\
 \item Faculty of Life Sciences, University of Copenhagen, Denmark\\
 \item SAXLAB ApS. Lundtofte, Denmark\\
 \item ESRF, Grenoble, France
-\end{list}
+\end{itemize}
