--- a/branches/mcxtrace_1_0/sources.tex
+++ b/branches/mcxtrace_1_0/sources.tex
@@ -39,17 +39,17 @@ as in the example below:\index{Keyword!EXTEND}
   %}
 \end{verbatim}
 
-\subsection{Neutron flux}
-\label{s:neutron-flux}
-The flux of the sources deserves special attention. The total neutron
-intensity is defined as the sum of weights of all emitted neutron rays
+\subsection{Photon flux and Brilliance}
+\label{s:xray-flux}
+The flux of the sources deserves special attention. The total
+intensity is defined as the sum of weights of all emitted xrays
 during one simulation
-(the unit of total neutron weight is thus neutrons per second).
+(the unit of total photon weight is thus xrays per second).
 The flux, $\psi$, at an instrument is defined as intensity per area perpendicular
 to the beam direction.
 
 The source flux, $\Phi$, is defined in different units:
-the number of neutrons emitted per second from a
+the number of photon rays emitted per second from a
 1~cm$^2$ area on the source surface,
 with direction within a 1~ster.\ solid angle,
 and with wavelength within a 1 {\AA} interval.
@@ -67,7 +67,7 @@ The simulations are performed so that detector intensities
 are independent of the number of neutron histories simulated
 (although more neutron histories will give better statistics).
 If $N_{\rm sim}$ denotes the number of
-neutron histories to simulate, the initial neutron weight $p_0$ must be set to
+xray histories to simulate, the initial photon weight $p_0$ must be set to
 \begin{equation}
 \label{proprule}
 p_0 = \frac{N_{\rm total}}{N_{\rm sim}} =
@@ -91,59 +91,28 @@ See section \ref{sources-seealso} for details.
   \begin{center}
     \includegraphics[width=0.75\textwidth]{figures/sources.eps}
   \end{center}
-\caption{A circular source component (at z=0) emitting neutron events randomly, either from a model, or from a data file.}
+\caption{A circular source component (at z=0) emitting photon rays randomly, either from a model, or from a data file.}
 \label{f:source}
 \end{figure}
 
 \newpage
-\input{source_simple}
+\input{source_pt}
+
+\input{source_flat}
 
 \input{source_div}
 
-\input{source_maxwell}
+\input{source_gaussian}
 
-\input{source_gen}
+\input{source_lab}
 
-\newpage
-\input{moderator}
 
-\input{ISISdoc.tex}
-
-\newpage
-\input{Source_adapt}
-
-\input{Adapt_check}
-
-\newpage
-\input{Source_Optimizer}
-
-\input{Monitor_Optimizer}
-
-\newpage
-\section{Other sources components: contributed pulsed sources, virtual sources (event files)}
+\section{Other sources components: virtual sources (event files)}
 \label{sources-seealso}
-
-There are many other source definitions in \MCS .
-
-Detailed pulsed source components are available for new facilities
-in a number of contributed components:
-\begin{itemize}
-\item SNS ({\bf contrib/SNS\_source}),
-\item ISIS ({\bf contrib/ISIS\_moderator}) see section \ref{isis-moderator},
-\item ESS-project ({\bf ESS\_moderator\_long} and {\bf  ESS\_moderator\_short}).
-\end{itemize}
-
-When no analytical model (e.g. a Maxwellian distribution) exits,
-one may have access to measurements, estimated flux distributions,
-event files, and - better - to MCNP/Triploli4 neutron event records.
-The following components are then useful:
-
 \begin{itemize}
 \item{{\bf misc/Virtual\_input} can read a \MCS\ event file
 (in text or binary format), often bringing an order-of-magnitude speed-up.
 See section \ref{virtual_input}.}
-\item{{\bf contrib/Virtual\_tripoli4\_input} does the same, but from event files (text format) obtained from the \emph{Tripoli4} \cite{tripoli_webpage} reactor simulation program. Such files are usually huge.\index{Tripoli}}
-\item{{\bf contrib/Virtual\_mcnp\_input} can read MCNP "PTRAC" event files (text format) obtained from the \emph{MCNP} \cite{mcnp_webpage} reactor simulation program. Such files are usually huge.\index{MCNP}}
-\item{{\bf misc/Vitess\_input} can read \emph{Vitess} \cite{vitess_webpage} neutron event binary files.\index{Vitess}}
-\item{{\bf optics/Filter\_gen} reads a 1D distribution from a file, and may either modify or set the flux according to it. See section \ref{filter-gen}.}
 \end{itemize}
+
+
